--- a/index.html
+++ b/index.html
@@ -4,7 +4,66 @@
       <title>Ashiq Mohamed.Y</title>
    </head>
    <body>
-      <h1>Welcome to my profile page!</h1>
-      <p>Email: 2021mt93076@wilp.bits-pilani.ac.in</p>
+      <div class="align-right">
+         <h1>Ashiq Mohamed.Y</h1>
+         <h3>R&ampD Engineer - Software Quality at Broadcom Inc.</h3>
+         <p>Contact: +91-9884229920</p>
+         <p>Email: ashiq.mohd.19@gmail.com</p>
+         <p>BITS Email: 2021mt93076@wilp.bits-pilani.ac.in</p>
+         <p>LinkedIn: 
+            <a href="https://www.linkedin.com/in/ashiq-mohamed-71320237/">https://www.linkedin.com/in/ashiq-mohamed-71320237/</a>
+         </p>
+         <h3>  Introduction </h3>
+         <p>Engineering professional with 10+ years of experience in Software Quality Assurance, Enterprise Software Testing and Automation, Product Support and Sustenance.
+            Dexterous in working with Manual, Automation, API and System Testing assignments.
+            Served capacities including R&D Engineer - SW Quality, Technical Leader - Testing, Software Test Engineer & Network Engineer.
+         </p>
+         <h3>  Education Credentials </h3>
+         <table style="width:100%">
+            <tbody>
+               <tr>
+                  <td>
+                     2021 till date
+                  </td>
+                  <td>M.Tech in Software Engineering from Birla Institute of Technology &amp Science, Pilani</td>
+               </tr>
+               <tr>
+                  <td>
+                     2010
+                  </td>
+                  <td>B.E. in Electronics and Communications from Anna University, Chennai</td>
+               </tr>
+            </tbody>
+         </table>
+         <h3>Professional Experience </h3>
+         <table style="width:100%">
+            <tbody>
+               <tr>
+                  <td>2020 till date </td>
+                  <td>R&ampD Engineer at Broadcom Inc. Bangalore</td>
+               </tr>
+               <tr>
+                  <td>2019-2020</td>
+                  <td>Technical Lead - Testing at Altran Technologies, Chennai</td>
+               </tr>
+               <tr>
+                  <td>2013-2019</td>
+                  <td>Technical Lead at HCL Technologies, Chennai</td>
+               </tr>
+               <tr>
+                  <td>2010-2013</td>
+                  <td>IT Consultant at CGI Technologies, Bangalore</td>
+               </tr>
+            </tbody>
+         </table>
+         <h3>  Licenses &amp Certifications </h3>
+         Brocade SAN Administrator
+         <br>
+         Python Scripting for DevOps Specialization
+         <br>
+         Brocade Certified vRouter Engineer
+         <br>
+         Cisco Certified Network Associate
+      </div>
    </body>
 </html>
