--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
       <div class="align-right">
          <h1>Ashiq Mohamed.Y</h1>
          <h3>R&ampD Engineer - Software Quality at Broadcom Inc.</h3>
-         <p>Contact: +91-9884229920</p>
-         <p>Email: ashiq.mohd.19@gmail.com</p>
-         <p>BITS Email: 2021mt93076@wilp.bits-pilani.ac.in</p>
-         <p>LinkedIn: 
+         <p>Contact: +91-9884229920
+         <br>
+         Email: ashiq.mohd.19@gmail.com
+         <br>
+         BITS Email: 2021mt93076@wilp.bits-pilani.ac.in
+         <br>   
+         LinkedIn: 
             <a href="https://www.linkedin.com/in/ashiq-mohamed-71320237/">https://www.linkedin.com/in/ashiq-mohamed-71320237/</a>
          </p>
          <h3>  Introduction </h3>
