--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <tbody>
                <tr>
                   <td>
-                     2021 till date
+                     Currently Persuing
                   </td>
                   <td>M.Tech in Software Engineering from Birla Institute of Technology &amp Science, Pilani</td>
                </tr>
