--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
          </p>
          
          <h3>Professional Experience </h3>
-         <table style="width:100%">
+         <style>
+            td {
+               border: solid 2px lightgrey;
+            }
+         </style>
+         <table style="border: 5px solid #990000; border-collapse: collapse">
             <tbody>
                <tr>
                   <td>2020 till date </td>
@@ -46,7 +51,7 @@
          </table>
          
          <h3>  Education Credentials </h3>
-         <table style="width:100%">
+         <table style="border: 5px solid #990000; border-collapse: collapse">
             <tbody>
                <tr>
                   <td>
