--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                border: solid 2px lightgrey;
             }
          </style>
-         <table style="width: 100%; border: 2px solid lightgrey; border-collapse: collapse">
+         <table style="width: 50%%; border: 2px solid lightgrey; border-collapse: collapse">
             <tbody>
                <tr>
                   <td>2020 till date </td>
@@ -51,7 +51,7 @@
          </table>
          
          <h3>  Education Credentials </h3>
-         <table style="width: 100%; border: 2px solid lightgrey; border-collapse: collapse">
+         <table style="width: 50%; border: 2px solid lightgrey; border-collapse: collapse">
             <tbody>
                <tr>
                   <td>
